--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,86 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.App {
+  display: flex;
+  justify-content: space-around;
+  margin: 1.5rem;
+}
+
+.control {
   text-align: center;
+  margin-right: 1.5rem;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.search-wrapper {
+  max-width: 100%;
+  background: white;
+  border: 1px solid lightgray;
+  border-radius: 15px;
+  overflow: hidden;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+.search-wrapper:hover, .search-wrapper:focus {
+  border: 1px solid #cccccc;
+}
+
+input {
+  outline: none;
+  font-size: 1rem;
+  border: 1px solid lightgray;
+  padding: 0.5rem;
+  margin: 1rem;
+  border-radius: 15px;
+}
+
+.search-control {
+  display: flex;
+  justify-content: center;
+}
+
+button {
+  background: #01ac01;
+  border: 1px solid lightgray;
+  color: white;
+  padding: 0.5rem;
+  margin: 1rem;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.result {
+  cursor: pointer;
+  text-align: left;
+  padding: 0.5rem;
+  font-size: 0.85rem;
+}
+
+.result:hover {
+  background: whitesmoke;
+}
+
+#map-area {
+  height: 90vh;
+  width: 100%;
+}
+
+@media screen and (max-width: 800px) {
+  .App {
+    flex-direction: column;
   }
-  to {
-    transform: rotate(360deg);
+
+  .control {
+    margin-right: 0;
+  }
+
+  .result {
+    text-align: center;
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+@media screen and (max-width: 400px) {
+  .search-control {
+    display: block;
   }
-}
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+  button {
+    margin: -1rem 0 0.5rem;
+  }
 }
