--- a/src/App.css
+++ b/src/App.css
@@ -9,12 +9,34 @@
   margin-right: 1.5rem;
 }
 
-.search-wrapper {
+.search-wrapper, .streets {
   max-width: 100%;
   background: white;
   border: 1px solid lightgray;
   border-radius: 15px;
   overflow: hidden;
+}
+
+.streets {
+  height: 50vh;
+  overflow-y: scroll;
+}
+
+.streets::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+.streets::-webkit-scrollbar {
+  width: 12px;
+  background-color: #F5F5F5;
+}
+
+.streets::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #555;
 }
 
 .search-wrapper:hover, .search-wrapper:focus {
