--- a/src/index.css
+++ b/src/index.css
@@ -35,18 +35,9 @@ button {
   font-family: inherit;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
 }
 
 .control {
@@ -56,15 +47,16 @@ button:hover {
 
 .search-wrapper, .streets {
   max-width: 100%;
-  background: white;
-  border: 1px solid lightgray;
+  background-color: #333333;
   border-radius: 15px;
   overflow: hidden;
+  box-shadow: 10px -2px 20px 2px rgb(0 0 0 / 30%);
 }
 
 .streets {
   height: 50vh;
   overflow-y: scroll;
+  margin-bottom: 3rem;
 }
 
 .streets::-webkit-scrollbar-track {
@@ -74,24 +66,19 @@ button:hover {
 }
 
 .streets::-webkit-scrollbar {
-  width: 12px;
-  background-color: #F5F5F5;
+  width: 10px;
 }
 
 .streets::-webkit-scrollbar-thumb {
   border-radius: 10px;
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-	background-color: #555;
-}
-
-.search-wrapper:hover, .search-wrapper:focus {
-  border: 1px solid #cccccc;
+	background-color: #555555;
 }
 
 input {
   outline: none;
   font-size: 1rem;
-  border: 1px solid lightgray;
+  border: 2px solid lightgray;
   padding: 0.5rem;
   margin: 1rem;
   border-radius: 15px;
@@ -104,12 +91,12 @@ input {
 
 button {
   background: #01ac01;
-  border: 1px solid lightgray;
   color: white;
   padding: 0.5rem;
   margin: 1rem;
   font-size: 1rem;
   cursor: pointer;
+  border: none;
 }
 
 .result {
@@ -120,7 +107,7 @@ button {
 }
 
 .result:hover {
-  background: whitesmoke;
+  background: #262626;
 }
 
 #map-area {
